fine-tuning added

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -21,5 +21,6 @@
     "editor:fold-all",
     "editor:unfold-all"
   ],
-  "promptDelete": false
+  "promptDelete": false,
+  "strictLineBreaks": false
 }
